--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "author": "Matthew Poppell",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.23.6",
     "fancy-log": "^1.3.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel-minify": "^0.3.0",
     "gulp-browserify": "^0.5.1",
+    "gulp-clean-css": "^3.9.3",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
-    "gulp-livereload": "^3.8.1"
+    "gulp-jsonminify": "^1.1.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.3.1",
+    "mustache": "^2.3.0"
   },
   "dependencies": {}
 }
