--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-jsonminify": "^1.1.0",
     "gulp-sass": "^3.2.1",
     "gulp-uglify": "^3.0.0",
+    "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
     "mustache": "^2.3.0",
     "popper.js": "^1.14.1"
