handlebars tidy up

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^3.9.3",
     "gulp-concat": "^2.6.1",
+    "gulp-handlebars": "^5.0.2",
     "gulp-if": "^2.0.2",
     "gulp-jsonminify": "^1.1.0",
     "gulp-sass": "^3.2.1",
