--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^3.9.3",
     "gulp-concat": "^2.6.1",
+    "gulp-declare": "^0.3.0",
     "gulp-handlebars": "^5.0.2",
     "gulp-if": "^2.0.2",
     "gulp-jsonminify": "^1.1.0",
     "gulp-sass": "^3.2.1",
     "gulp-uglify": "^3.0.0",
+    "gulp-wrap": "^0.13.0",
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
     "mustache": "^2.3.0",
