--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-sync": "^2.23.6",
     "fancy-log": "^1.3.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-babel-minify": "^0.3.0",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^3.9.3",
