--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "Matthew Poppell",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.6.1",
     "bootstrap": "^4.0.0",
     "browser-sync": "^2.23.6",
     "fancy-log": "^1.3.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-babel-minify": "^0.3.0",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^3.9.3",
@@ -26,6 +29,7 @@
     "gulp-if": "^2.0.2",
     "gulp-jsonminify": "^1.1.0",
     "gulp-sass": "^3.2.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-wrap": "^0.13.0",
     "handlebars": "^4.0.11",
